--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint --max-warnings=0 .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:packages": "npm run lint --workspaces=false && npm run build --workspace @argus/world-map"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -33,7 +34,8 @@
     "react-router-dom": "^7.9.4",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@argus/world-map": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -54,5 +56,8 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
