--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - ./certs/keycloak:/opt/keycloak/conf/tls:ro
       - keycloak-data:/opt/keycloak/data
     ports:
+      - "${KC_HTTP_PORT:-8080}:8080"
       - "${KC_HTTPS_PORT:-8443}:8443"
     networks:
       - keycloak
