--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server": "TMPDIR=$PWD/server/.tmp npm run dev --prefix server"
   },
   "dependencies": {
+    "@argus/world-map": "workspace:*",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -29,14 +30,12 @@
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-google-recaptcha-v3": "^1.11.0",
     "react-i18next": "^16.0.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "@argus/world-map": "workspace:*"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
