--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^4.1.0",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "jwt-decode": "^4.0.0",
     "keycloak-js": "^26.2.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
