Add CAPTCHA verification to login and registration
Introduces Cloudflare Turnstile CAPTCHA validation for login and registration endpoints in the backend and integrates the challenge in the frontend login flow. Refactors backend handlers to use a shared captcha module, updates models to include captcha tokens, and adds cooldown logic for repeated failed login attempts. Also improves CORS configuration, security headers, and updates related configuration and localization files.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,32 @@
 server {
     listen 80;
     server_name _;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name _;
+
+    ssl_certificate     /etc/nginx/certs/tls.crt;
+    ssl_certificate_key /etc/nginx/certs/tls.key;
+
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:MozSSL:10m;
+    ssl_session_tickets off;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
 
     root /usr/share/nginx/html;
     index index.html;
 
     charset utf-8;
+
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "DENY" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://challenges.cloudflare.com https://*.basemaps.cartocdn.com https://*.cartocdn.com https://*.tile.openstreetmap.org; connect-src 'self' https://127.0.0.1:8000 http://127.0.0.1:8000 https://localhost:8000 http://localhost:8000 https://challenges.cloudflare.com https://*.basemaps.cartocdn.com https://*.cartocdn.com https://*.tile.openstreetmap.org; font-src 'self' data:; frame-src https://challenges.cloudflare.com; frame-ancestors 'none';" always;
 
     location / {
         try_files $uri $uri/ /index.html;
